Fix scrollbar moving content horizontally when navigating between longer and shorter pages

--- a/files/static/styles/antique.css
+++ b/files/static/styles/antique.css
@@ -5,6 +5,7 @@ body {
     background-color: antiquewhite;
     color: black;
     font-family: 'Open Sans', sans-serif;
+    overflow-y: scroll;
 }
 
 a {
