--- a/files/static/styles/oledmatrix.css
+++ b/files/static/styles/oledmatrix.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Rubik', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     color-scheme: dark;
+    overflow-y: scroll;
 }
 
 .icon {
